--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -8,11 +8,22 @@
 </head>
 
 <body>
-    <h1>Register</h1>
+    <h1>Log In</h1>
+
+    {% if error %}
+    <!-- DO NOT LEAVE THIS WITH INLINE CSS, I WILL KILL! -->
+    <p style="color:red;">{{ error }}</p>
+    {% endif %}
+
+    {% if new %}
+    <!-- NO SERIOUSLY, I WILL ACTUALLY MURDER YOU! -->
+    <p style="color:green;">You have successfully registered an account! Please now log in.</p>
+    {% endif %}
+
     <form method="post" action="/account/login">
         <div>
             <label for="email">Email</label>
-            <input type="email" name="email" id="email">
+            <input type="email" name="email" id="email" {% if email %} value="{{ email }}" {% endif %}>
         </div>
         <div>
             <label for="password">Password</label>
