--- a/templates/account/register.html
+++ b/templates/account/register.html
@@ -9,10 +9,16 @@
 
 <body>
     <h1>Register</h1>
+
+    {% if error %}
+    <!-- DO NOT LEAVE THIS WITH INLINE CSS, I WILL KILL! -->
+    <p style="color:red;">{{ error }}</p>
+    {% endif %}
+
     <form method="post" action="/account/register">
         <div>
             <label for="email">Email</label>
-            <input type="email" name="email" id="email">
+            <input type="email" name="email" id="email" {% if email %} value="{{ email }}" {% endif %}>
         </div>
         <div>
             <label for="password">Password</label>
