Website JS initialisation Created folder.file structure Started on reg/login server requests Added links to reg/login

--- a/templates/account/register.html
+++ b/templates/account/register.html
@@ -26,6 +26,7 @@
         </div>
         <div>
             <input type="submit" value="Register">
+            <a href="/account/login">Sign In</a>
         </div>
 </body>
 
