--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -3,8 +3,9 @@
 
 <head>
     {% include("parts/meta.html") %}
-    <title>Register</title>
+    <title>Login</title>
     <link href="/static/css/style.css" rel="stylesheet">
+    <script src="/static/scripts/account/login.js" async></script>
 </head>
 
 <body>
@@ -31,6 +32,7 @@
         </div>
         <div>
             <input type="submit" value="Sign In">
+            <a href="/account/register">Register</a>
         </div>
 </body>
 
