--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -1,18 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     {% include("parts/meta.html") %}
-    <title>Welcome</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>Landing</title>
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link href="/static/css/style.css" rel="stylesheet">
 </head>
 
 <body>
-    <p>Hello, world!</p>
-
-    <a href="/account/register"><p>Register</p></a>
-
-    <a href="/account/login"><p>Log in</p></a>
+    <div class="text-center" style="width: 100%;height: 100%;margin-top: 55%;margin-bottom: 45%;"><img class="rounded-circle border border-1 border-dark" src="assets/img/15471-3930222315.png" style="height: 96px;width: 96px;">
+        <p class="text-center">Hundreds of books<br>Free on Bookify</p>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12"><a class="btn btn-light text-center border rounded-pill" role="button" href="signup.html" style="width: 50%;backdrop-filter: blur(0px);">Sign Up</a></div>
+            </div>
+            <div class="row">
+                <div class="col-md-12" style="padding-top: 6px;"><a class="text-center" href="login.html" style="font-size: 100%;">Login</a></div>
+            </div>
+        </div>
+    </div>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
 </body>
 
 </html>
