--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -6,12 +6,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Landing</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="static/css/bootstrap.min.css">
     <link href="/static/css/style.css" rel="stylesheet">
 </head>
 
 <body>
-    <div class="text-center" style="width: 100%;height: 100%;margin-top: 55%;margin-bottom: 45%;"><img class="rounded-circle border border-1 border-dark" src="assets/img/15471-3930222315.png" style="height: 96px;width: 96px;">
+    <div class="text-center" style="width: 100%;height: 100%;margin-top: 55%;margin-bottom: 45%;"><img class="rounded-circle border border-1 border-dark" src="img/15471-3930222315.png" style="height: 96px;width: 96px;">
         <p class="text-center">Hundreds of books<br>Free on Bookify</p>
         <div class="container">
             <div class="row">
