--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div class="text-center" style="width: 100%;height: 100%;margin-top: 55%;margin-bottom: 45%;"><img class="rounded-circle border border-1 border-dark" src="img/15471-3930222315.png" style="height: 96px;width: 96px;">
+    <div class="text-center" style="width: 100%;height: 100%;margin-top: 55%;margin-bottom: 45%;"><img class="rounded-circle border border-1 border-dark" src="static/img/15471-3930222315.png" style="height: 96px;width: 96px;">
         <p class="text-center">Hundreds of books<br>Free on Bookify</p>
         <div class="container">
             <div class="row">
@@ -22,7 +22,7 @@
             </div>
         </div>
     </div>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="static/js/bootstrap.min.js"></script>
 </body>
 
 </html>
