Updated path references

--- a/templates/login.html
+++ b/templates/login.html
@@ -26,7 +26,7 @@
             <div class="col"><a style="font-size: 12px;" href="https://google.com">Forgot your password?</a></div>
         </div>
     </div>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="static/js/bootstrap.min.js"></script>
 </body>
 
 </html>
