--- a/templates/Register.html
+++ b/templates/Register.html
@@ -26,7 +26,7 @@
             <div class="col"><p style="font-size: 12px;">Already have an account? <a href="login.html"> Login</a></p></div>
         </div>
     </div>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="static/js/bootstrap.min.js"></script>
 </body>
 
 </html>
