--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -7,18 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Landing</title>
     <link rel="stylesheet" href="static/css/bootstrap.min.css">
-    <link href="/static/css/style.css" rel="stylesheet">
 </head>
 
 <body>
-    <div class="text-center" style="width: 100%;height: 100%;margin-top: 55%;margin-bottom: 45%;"><img class="rounded-circle border border-1 border-dark" src="static/img/15471-3930222315.png" style="height: 96px;width: 96px;">
+    <div class="text-center" style="width: 100%;height: 100%;margin-top: 55%;margin-bottom: 45%;"><img class="rounded-circle border border-1 border-dark" src="static/img/DIYA.png" style="height: 96px;width: 96px;">
         <p class="text-center">Hundreds of books<br>Free on Bookify</p>
         <div class="container">
             <div class="row">
-                <div class="col-md-12"><a class="btn btn-light text-center border rounded-pill" role="button" href="signup.html" style="width: 50%;backdrop-filter: blur(0px);">Sign Up</a></div>
+                <div class="col-md-12"><a class="btn btn-light text-center border rounded-pill" role="button" href="/account/register" style="width: 50%;backdrop-filter: blur(0px);">Sign Up</a></div>
             </div>
             <div class="row">
-                <div class="col-md-12" style="padding-top: 6px;"><a class="text-center" href="login.html" style="font-size: 100%;">Login</a></div>
+                <div class="col-md-12" style="padding-top: 6px;"><a class="text-center" href="/account/login" style="font-size: 100%;">Login</a></div>
             </div>
         </div>
     </div>
