--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -5,11 +5,10 @@
     {% include("parts/meta.html") %}
     <title>Login</title>
     <link rel="stylesheet" href="/static/css/bootstrap.min.css">
-    <script src="/static/scripts/account/login.js" async></script>
 </head>
 
 <body>
-    <div class="text-center" style="width: 100%;height: 100%;margin-top: 55%;margin-bottom: 45%;"><img class="rounded-circle border border-1 border-dark" src="/static/img/DIYA.png" style="height: 96px;width: 96px;">
+    <div class="text-center" style="width: 100%;height: 100%;margin-top: 15%;"><img class="rounded-circle border border-1 border-dark" src="/static/img/DIYA.png" style="height: 96px;width: 96px;">
         <p class="text-center"><strong>Welcome Back</strong><br>Login to continue</p>
 
 
@@ -43,7 +42,7 @@
             </div>
         -->
     </div>
-    <script src="/static/js/bootstrap.min.js"></script>
+    <script src="/static/scripts/bootstrap.min.js"></script>
 </body>
 
 </html>
