--- a/templates/account/register.html
+++ b/templates/account/register.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <div class="text-center" style="width: 100%;height: 100%;margin-top: 55%;margin-bottom: 45%;"><img class="rounded-circle border border-1 border-dark" src="/static/img/DIYA.png" style="height: 96px;width: 96px;">
+    <div class="text-center" style="width: 100%;height: 100%;margin-top: 15%;"><img class="rounded-circle border border-1 border-dark" src="/static/img/DIYA.png" style="height: 96px;width: 96px;">
         <p class="text-center"><strong>Create Account</strong><br>Sign up to continue</p>
 
         {% if error %}
@@ -31,7 +31,7 @@
             </div>
         </div>
     </div>
-    <script src="/static/js/bootstrap.min.js"></script>
+    <script src="/static/scripts/bootstrap.min.js"></script>
 </body>
 
 </html>
