--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -3,14 +3,12 @@
 
 <head>
     {% include("parts/meta.html") %}
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Landing</title>
     <link rel="stylesheet" href="static/css/bootstrap.min.css">
 </head>
 
 <body>
-    <div class="text-center" style="width: 100%;height: 100%;margin-top: 55%;margin-bottom: 45%;"><img class="rounded-circle border border-1 border-dark" src="static/img/DIYA.png" style="height: 96px;width: 96px;">
+    <div class="text-center" style="width: 100%;height: 100%;margin-top: 15%;"><img class="rounded-circle border border-1 border-dark" src="static/img/DIYA.png" style="height: 96px;width: 96px;">
         <p class="text-center">Hundreds of books<br>Free on Bookify</p>
         <div class="container">
             <div class="row">
@@ -21,7 +19,7 @@
             </div>
         </div>
     </div>
-    <script src="static/js/bootstrap.min.js"></script>
+    <script src="static/scripts/bootstrap.min.js"></script>
 </body>
 
 </html>
