Add temporary site map so it is testable

--- a/templates/account/details.html
+++ b/templates/account/details.html
@@ -13,6 +13,10 @@
     <p>Created: {{ user["created"] }}</p>
     <p>Premium: {{ user["premium"] }}</p>
     <p>Premium Expires: {{ user["premiumExpires"] }}</p>
+
+    <br>
+    
+    <a href="/">Home</a>
 </body>
 
 </html>
