updated account details

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,10 @@
+* {
+  font-family: Roboto, Arial, sans-serif;
+}
+
 body {
     max-width: 800px;
     margin: 0 auto;
-    font-family: Roboto, Arial, sans-serif;
     background: #232629;
     color: #fff;
 }
@@ -23,4 +26,9 @@ a:link {
 
 a:visited {
     color: #9800be;
+}
+
+title{
+ 
+    text-align: center;
 }
