--- a/templates/account/details.html
+++ b/templates/account/details.html
@@ -3,11 +3,17 @@
 
 <head>
     {% include("parts/meta.html") %}
-    <title>Account</title>
+    <nav> 
+        <a href="/" id="home">Home</a>
+        <a href="/" id="LogOut">Log Out</a>
+    </nav>
+    
+    <title>Account Details</title>
     <link href="/static/css/style.css" rel="stylesheet">
 </head>
 
 <body>
+    
     <p>Email: {{ user["email"] }}</p>
     <p>Admin: {{ user["admin"] }}</p>
     <p>Created: {{ user["created"] }}</p>
@@ -15,8 +21,7 @@
     <p>Premium Expires: {{ user["premiumExpires"] }}</p>
 
     <br>
-    
-    <a href="/">Home</a>
+
 </body>
 
 </html>
