Add delete account button to account details page

--- a/templates/account/details.html
+++ b/templates/account/details.html
@@ -23,6 +23,9 @@
 
     <br>
 
+    <script src="/static/scripts/account/delete.js"></script>
+    <button onclick="deleteAccountButton()">Delete Account</button>
+
 </body>
 
 </html>
