--- a/templates/parts/meta.html
+++ b/templates/parts/meta.html
@@ -2,3 +2,5 @@
 <meta name="author" content="DIYA Inc">
 <meta name="description" content="DIYA Inc">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
+<script src="/static/scripts/utils/androidCompat.js" async></script>
