--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,7 +10,17 @@ body {
 }
 
 h1, h2 {
+    border-bottom: 3px solid #fff;
+    text-align:center;
+   
+}
+
+h3{
+    border-top: 1px solid #fff;
     border-bottom: 1px solid #fff;
+    text-align:center;
+    border-width: 3px;
+  
 }
 
 input, button {
@@ -19,24 +29,47 @@ input, button {
     color: #fff;
 }
 
+a {
+    font-size: 20px;
+
+}
+
 a:link {
 
     padding: 5px;
     text-decoration: none;
-    color: #544efd;
+    color: #ffffff;
 }
 
 a:visited {
-    color: #9800be;
+    color: #c7c7c7;
 }
 
 nav {
     text-align: center;
+    height: 10%;
+    font-size: 20px;
+    padding:20px;
+    border-width: 10px;
+    border-color: #ffffff;
 }
 
 title{
- 
+    
     text-align: center;
+}
+
+#bookList {
+
+    font-size: large;
+    font-size: 20px;
+    padding: 2px;
+}
+
+
+#admin {
+    text-align: center;
+    font-size: 20px;
 }
 
 
