--- a/templates/account/details.html
+++ b/templates/account/details.html
@@ -4,10 +4,7 @@
 <head>
     {% include("parts/meta.html") %}
     
-    <nav> 
-        <a href="/" id="home">Home</a>
-        <a href="/" id="LogOut">Log Out</a>
-    </nav>
+    {% include("parts/nav.html") %}
 
     <title>Account Details</title>
     <link href="/static/css/style.css" rel="stylesheet">
