--- a/templates/admin/books/edit.html
+++ b/templates/admin/books/edit.html
@@ -3,6 +3,7 @@
 
 <head>
     {% include("parts/meta.html") %}
+    {% include("parts/nav.html")%}
     <title></title>
     <link href="/static/css/style.css" rel="stylesheet">
 </head>
