updated nav (i think)

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
     <h3>Books</h3>
     
         {% for book in books %}
-        <a id= "bookList" href="/books/view/{{ book.bookID }}">{{ book.title }}</a>
+        <a id= "bookList" href="/books/view/{{ book.bookID }}">{{ book.title }}</a><br>
         {% endfor %}
     
 
