--- a/templates/parts/nav.html
+++ b/templates/parts/nav.html
@@ -1,5 +1,5 @@
 <nav> 
-    <link href="/static/css/style.css" rel="stylesheet">
     <a href="/" id="home">Home</a>
-    <a href="/" id="LogOut">Log Out</a>
+    <a href="/account/logout" id="LogOut">Log Out</a>
+    <a href="/account/details" id="accDetails">Account Details</a>
 </nav>
