--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>Temporary Site Map</h1>
-
+    {% include("parts/search.html") %}
     <h2>Account Stuff</h2>
     <ul>
         <li><a href="/account/logout">Logout</a></li>
