--- a/templates/admin/books/edit.html
+++ b/templates/admin/books/edit.html
@@ -11,47 +11,47 @@
 <body>
     <!-- There should be max lengths, check scripts/databaseStructure.sql -->
     <form method="post" action="/admin/books/edit/{{ bookID }}" enctype="multipart/form-data">
-        <label for="title">Title</label>
-        <input type="text" name="title" id="title">
+        <label for="title">Title</label><br>
+        <input type="text" name="title" id="title"><br>
 
         <label for="author">Author</label>
-        <input type="text" name="author" id="author">
+        <input type="text" name="author" id="author"><br>
 
-        <label for="isbn">ISBN</label>
-        <input type="text" name="isbn" id="isbn">
+        <label for="isbn">ISBN</label><br>
+        <input type="text" name="isbn" id="isbn"><br>
 
-        <label for="publisher">Publisher</label>
-        <input type="text" name="publisher" id="publisher">
+        <label for="publisher">Publisher</label><br>
+        <input type="text" name="publisher" id="publisher"><br>
 
-        <label for="publicationDate">Publication Date</label>
-        <input type="date" name="publicationDate" id="publicationDate">
+        <label for="publicationDate">Publication Date</label><br>
+        <input type="date" name="publicationDate" id="publicationDate"><br>
 
-        <label for="description">Description</label>
-        <textarea name="description" id="description"></textarea>
+        <label for="description">Description</label><br>
+        <textarea name="description" id="description"></textarea><br>
 
-        <label for="pageCount">Page Count</label>
-        <input type="number" name="pageCount" id="pageCount">
+        <label for="pageCount">Page Count</label><br>
+        <input type="number" name="pageCount" id="pageCount"><br>
 
         <!-- Make this be ISO 3166 Alpha 3 country codes
         https://en.wikipedia.org/wiki/ISO_3166-1_alpha-3
         maybe a drop down? -->
-        <label for="language">Language</label>
-        <input type="text" name="language" id="language">
+        <label for="language">Language</label><br>
+        <input type="text" name="language" id="language"><br>
 
-        <label for="genre">Genre</label>
-        <input type="text" name="genre" id="genre">
+        <label for="genre">Genre</label><br>
+        <input type="text" name="genre" id="genre"><br>
 
-        <label for="readingAge">Reading Age</label>
-        <input type="number" name="readingAge" id="readingAge">
+        <label for="readingAge">Reading Age</label><br>
+        <input type="number" name="readingAge" id="readingAge"><br>
 
         <!-- This should be a list of catalogues
         right now the server supports comma seperated values
         "catalogue1, catalogue2, catalogue3"-->
-        <label for="catalogues">Catalogues</label>
-        <input type="text" name="catalogues" id="catalogues">
+        <label for="catalogues">Catalogues</label><br>
+        <input type="text" name="catalogues" id="catalogues"><br>
 
-        <label for="file">File</label>
-        <input type="file" name="file" id="file" accept=".epub">
+        <label for="file">File</label><br>
+        <input type="file" name="file" id="file" accept=".epub"><br>
 
         <input type="submit" value="Edit book">
     </form>
