--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,7 +5,7 @@
 body {
     padding:2%;
     max-width: 800px;
-    margin: 0 auto;
+    margin: 16px auto;
     background: #ffffff;
     color: #000000;
 }
@@ -42,11 +42,11 @@ a:link {
 
     padding: 5px;
     text-decoration: none;
-    color: #ffffff;
+    color: #000000;
 }
 
 a:visited {
-    color: #c7c7c7;
+    color: #474747;
 }
 
 nav {
