added language selection drop down

--- a/templates/admin/books/add.html
+++ b/templates/admin/books/add.html
@@ -36,8 +36,12 @@
         <!-- Make this be ISO 3166 Alpha 3 country codes
         https://en.wikipedia.org/wiki/ISO_3166-1_alpha-3
         maybe a drop down? -->
-        <label for="language">Language</label><br>
-        <input type="text" name="language" id="language"><br>
+        <select id="language" name="language">
+            <option value="eng">English</option>
+            <option value="fra">French</option>
+            <option value="spa">Spanish</option>
+          </select><br>
+
 
         <label for="genre">Genre</label><br>
         <input type="text" name="genre" id="genre"><br>
