--- a/templates/admin/books/edit.html
+++ b/templates/admin/books/edit.html
@@ -14,7 +14,7 @@
         <label for="title">Title</label><br>
         <input type="text" name="title" id="title"><br>
 
-        <label for="author">Author</label>
+        <label for="author">Author</label><br>
         <input type="text" name="author" id="author"><br>
 
         <label for="isbn">ISBN</label><br>
@@ -60,7 +60,7 @@
         <input type="submit" value="Edit book">
     </form>
 
-    <h1> Current metadata </h1>
+    <h1> Current Details </h1>
     
     <!-- make this be the default values in the form -->
     
