--- a/templates/books/view.html
+++ b/templates/books/view.html
@@ -7,13 +7,6 @@
     <link href="/static/css/style.css" rel="stylesheet">
 </head>
 
-<!-- 
-    add book at /admin/books/add 
-    view book at /books/view/1
-    edit book at /admin/books/edit/1
-    delete books with HTTP DELETE to /admin/books/delete/1 (do it with javascript)
--->
-
 <body>
     {{ book["title"] }}<br>
     {{ book["author"] }}<br>
@@ -26,6 +19,10 @@
     {{ book["genre"] }}<br>
     {{ book["readingAge"] }}<br>
     {{ book["catalogues"] }}<br><br>
+
+    {% if user.admin %}
+    <a href="/admin/books/edit/{{ book['bookID'] }}">Edit Book</a><br><br>
+    {% endif %}
 
     <img src="{{ book['coverURL'] }}" alt="Cover Image">
     
