--- a/templates/admin/books/edit.html
+++ b/templates/admin/books/edit.html
@@ -12,30 +12,30 @@
     <!-- There should be max lengths, check scripts/databaseStructure.sql -->
     <form method="post" action="/admin/books/edit/{{ bookID }}" enctype="multipart/form-data">
         <label for="title">Title</label><br>
-        <input type="text" name="title" id="title"><br>
-
+        <input type="text" name="title" id="title" value="{{ book['title'] }}"><br>
+    
         <label for="author">Author</label><br>
-        <input type="text" name="author" id="author"><br>
+        <input type="text" name="author" id="author" value="{{ book['author'] }}"><br>
 
         <label for="isbn">ISBN</label><br>
-        <input type="text" name="isbn" id="isbn"><br>
+        <input type="text" name="isbn" id="isbn" value="{{ book['isbn'] }}"><br>
 
         <label for="publisher">Publisher</label><br>
-        <input type="text" name="publisher" id="publisher"><br>
+        <input type="text" name="publisher" id="publisher" value="{{ book['publisher'] }}"><br>
 
         <label for="publicationDate">Publication Date</label><br>
-        <input type="date" name="publicationDate" id="publicationDate"><br>
+        <input type="date" name="publicationDate" id="publicationDate" value="{{ book['publicationDate'] }}"><br>
 
         <label for="description">Description</label><br>
-        <textarea name="description" id="description"></textarea><br>
+        <textarea name="description" id="description">{{ book['description'] }}</textarea><br>
 
         <label for="pageCount">Page Count</label><br>
-        <input type="number" name="pageCount" id="pageCount"><br>
+        <input type="number" name="pageCount" id="pageCount" value="{{ book['pageCount'] }}"><br>
 
         <!-- Make this be ISO 3166 Alpha 3 country codes
         https://en.wikipedia.org/wiki/ISO_3166-1_alpha-3
         maybe a drop down? -->
-        
+        <label for="language">Language</label><br>
         <select id="language" name="language">
             <option value="eng">English</option>
             <option value="fra">French</option>
@@ -43,16 +43,16 @@
           </select><br>
 
         <label for="genre">Genre</label><br>
-        <input type="text" name="genre" id="genre"><br>
+        <input type="text" name="genre" id="genre" value="{{ book['genre'] }}"><br>
 
         <label for="readingAge">Reading Age</label><br>
-        <input type="number" name="readingAge" id="readingAge"><br>
+        <input type="number" name="readingAge" id="readingAge" value="{{ book['readingAge'] }}"><br>
 
         <!-- This should be a list of catalogues
         right now the server supports comma seperated values
         "catalogue1, catalogue2, catalogue3"-->
         <label for="catalogues">Catalogues</label><br>
-        <input type="text" name="catalogues" id="catalogues"><br>
+        <input type="text" name="catalogues" id="catalogues" value="{{ book['catalogues'] }}"><br>
 
         <label for="file">File</label><br>
         <input type="file" name="file" id="file" accept=".epub"><br>
@@ -64,21 +64,6 @@
 
     <button onclick="{{ 'deleteBookButton(' + bookID + ')' }}">Delete Book</button>
 
-    <h1> Current Details </h1>
-    
-    <!-- make this be the default values in the form -->
-    
-    {{ book["title"] }}<br>
-    {{ book["author"] }}<br>
-    {{ book["isbn"] }}<br>
-    {{ book["publisher"] }}<br>
-    {{ book["publicationDate"] }}<br>
-    {{ book["description"] }}<br>
-    {{ book["pageCount"] }}<br>
-    {{ book["language"] }}<br>
-    {{ book["genre"] }}<br>
-    {{ book["readingAge"] }}<br>
-    {{ book["catalogues"] }}<br>
 
     <img src="{{ book['coverURL'] }}" alt="Cover Image">
     
