Edit book catalogue input correct default value

--- a/templates/admin/books/edit.html
+++ b/templates/admin/books/edit.html
@@ -53,7 +53,7 @@
         "catalogue1, catalogue2, catalogue3"-->
 
         <label for="catalogues">Catalogues</label><br>
-        <input type="text" name="catalogues" id="catalogues" value="{{ book['catalogues'] }}"><br>
+        <input type="text" name="catalogues" id="catalogues" value="{{ ', '.join(book['catalogues']) }}"><br>
         <p>example for multiple catalogues: "catalogue1, catalogue2, catalogue3"</p>
 
         <label for="file">File</label><br>
