--- a/templates/parts/nav.html
+++ b/templates/parts/nav.html
@@ -48,7 +48,7 @@
     <a href="/" id="home">Home</a>
     <a href="/account/logout" id="LogOut">Log Out</a>
     <a href="/account/details" id="accDetails">Account Details</a>
-    <form name="searchForm" action id="searchForm">
+    <form name="searchForm" method="GET" id="searchForm">
         <input type="text" name="query" id="query" placeholder="Search..." required class="searchInput">
         <div class="filterSearchSettings">
             <details>
@@ -67,20 +67,18 @@
 <script> 
     function search() {
         let xhr = new XMLHttpRequest();
-        let url = new URL("https://diya.ink/api/books/search")
+        let url = new URL("/books/search")
         let inputs = [...document.getElementsByClassName("searchInput")];
-
+        
         inputs.forEach(e => {
             if(e.value != "") url.searchParams.append(e.id, e.value);
         });
     
         xhr.onload = function() {
             if (xhr.status != 200) { 
-                alert(`Error ${xhr.status}: ${xhr.statusText}`);
+                alert(url);
             } else {
-                location.href = "/";
-                xhr.timeout = 1000;
-                alert(`${xhr.status} \n ${xhr.response}`);
+                
             }
         };
     
