--- a/templates/parts/nav.html
+++ b/templates/parts/nav.html
@@ -48,7 +48,7 @@
     <a href="/" id="home">Home</a>
     <a href="/account/logout" id="LogOut">Log Out</a>
     <a href="/account/details" id="accDetails">Account Details</a>
-    <form name="searchForm" method="GET" id="searchForm">
+    <form name="searchForm" action="/books/search" method="GET">
         <input type="text" name="query" id="query" placeholder="Search..." required class="searchInput">
         <div class="filterSearchSettings">
             <details>
@@ -59,34 +59,7 @@
                     <input type="text" name="language" id="language" placeholder="Language" class="searchInput">
                     <input type="text" name="catalouge" id="catalouge" placeholder="Catalouge" class="searchInput">
             </details>
-            <button type="submit" onclick="search()">Go</button>
+            <button type="submit">Go</button>
         </div>
     </form>
 </nav>
-
-<script> 
-    function search() {
-        let xhr = new XMLHttpRequest();
-        let url = new URL("/books/search")
-        let inputs = [...document.getElementsByClassName("searchInput")];
-        
-        inputs.forEach(e => {
-            if(e.value != "") url.searchParams.append(e.id, e.value);
-        });
-    
-        xhr.onload = function() {
-            if (xhr.status != 200) { 
-                alert(url);
-            } else {
-                
-            }
-        };
-    
-        xhr.onerror = function() {
-            alert(`Network Error ${xhr.status} \n ${xhr.statusText}`);
-        };
-    
-        xhr.open("GET", url, true);
-        xhr.send();
-    }
-</script>
