adding Terms of service

--- a/templates/account/register.html
+++ b/templates/account/register.html
@@ -27,7 +27,7 @@
                     <input class="btn btn-primary btn-sm text-center border rounded-pill" role="button" type="submit" style="width: 50%;backdrop-filter: blur(0px);font-size: 12px;max-width: 200px;" value="Register"></div>
             </div>
             <div class="row">
-                <p style="font-size: 12px;">By clicking Register, you agree to our <a href="/static/privacyPolicy.txt">Privacy Policy</a>.</p>
+                <p style="font-size: 12px;">By clicking Register, you agree to our <a href="/static/TermsOfService.html">Terms Of Service</a>.</p>
                 <p style="font-size: 12px;">
                     Your pasword must:<br>
                     Be at least 12 characters long<br>
