Featured books on home page and fix for phones

--- a/templates/books/search.html
+++ b/templates/books/search.html
@@ -3,32 +3,14 @@
 
 <head>
     {% include("parts/meta.html") %}
-
-    {% include("parts/nav.html")%}
-
     <title>Search</title>
     <link href="/static/css/style.css" rel="stylesheet">
 </head>
 
-<style>
-    .bookResult {
-        display: flex;
-        border: grey 3px outset;
-        overflow: hidden;
-        cursor: pointer;
-    }
-    .bookResult > * :not(img) {
-        padding:  0.1rem;
-    }
-</style>
-
 <body>
-    {% for book in books %}
-    <div class="bookResult" onclick="location.href='/books/view/{{ book.bookID }}'">
-        <img src="{{ book.coverURL }}">
-        <a id="bookList" href="/books/view/{{ book.bookID }}">{{ book.title }}<br>By: {{ book.author }}<br>{{ book.description }}</a><br>
-    </div>
-    {% endfor %}
+    {% include("parts/nav.html")%}
+
+    {% include("parts/search.html") %}
 </body>
 
 </html>
