--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,29 +17,22 @@ h1, h2 {
 }
 
 h3{
-    border-top: 1px solid #000000;
-    border-bottom: 1px solid #000000;
     text-align:center;
     border-width: 3px;
   
 }
 
 
-
 input, button {
-
     width: 50%;
     border: 2px inset #000000;
-   
 }
 
 a {
     font-size: 20px;
-
 }
 
 a:link {
-
     padding: 5px;
     text-decoration: none;
     color: #000000;
@@ -47,6 +40,14 @@ a:link {
 
 a:visited {
     color: #474747;
+}
+
+a.button {
+    background-color: #9e9e9e;
+    color: #000;
+    padding: 5px;
+    border-radius: 5px;
+    text-decoration: none;
 }
 
 nav {
@@ -77,3 +78,29 @@ title{
 }
 
 
+.bookResult {
+    display: flex;
+    border: grey 3px outset;
+    overflow: hidden;
+    cursor: pointer;
+    margin: 8px;
+    max-width: calc(100% - 16px);
+}
+
+.bookResult > * {
+    max-width: 50%;
+}
+
+.resultDetails {
+    padding: 8px;
+}
+
+.resultDetails p {
+    margin: 0;
+}
+
+.detailsHeading {
+    font-size: 12px;
+    color: #666;
+    padding-top: 8px;
+}
