--- a/static/css/style.css
+++ b/static/css/style.css
@@ -42,12 +42,21 @@ a:visited {
     color: #474747;
 }
 
-a.button {
+button,
+.button {
     background-color: #9e9e9e;
     color: #000;
     padding: 5px;
     border-radius: 5px;
     text-decoration: none;
+    border: none;
+}
+
+.smallButton {
+    width: 120px;
+    padding: 6px 0; 
+    margin: auto;
+    font-size: 12px;
 }
 
 nav {
@@ -59,24 +68,20 @@ nav {
     border-color: #ffffff;
 }
 
-title{
-    
+title {
     text-align: center;
 }
 
 #bookList {
-
     font-size: large;
     font-size: 20px;
     padding: 2px;
 }
 
-
 #admin {
     text-align: center;
     font-size: 20px;
 }
-
 
 .bookResult {
     display: flex;
@@ -103,4 +108,18 @@ title{
     font-size: 12px;
     color: #666;
     padding-top: 8px;
+}
+
+.center {
+    text-align: center;
+}
+
+.box {
+    border: 1px solid black;
+    padding: 5px;
+    margin: 5px;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 4px;
 }
