Updated view book page Changed example text on edit page

--- a/templates/admin/books/edit.html
+++ b/templates/admin/books/edit.html
@@ -53,8 +53,8 @@
         "catalogue1, catalogue2, catalogue3"-->
 
         <label for="catalogues">Catalogues</label><br>
-        <input type="text" name="catalogues" id="catalogues" value="{{ ', '.join(book['catalogues']) }}"><br>
-        <p>example for multiple catalogues: "catalogue1, catalogue2, catalogue3"</p>
+        <input type="text" name="catalogues" id="catalogues" value="{{ ', '.join(book['catalogues']) }}">
+        <p>Example: "catalogue1, catalogue2, catalogue3"</p>
 
         <label for="file">File</label><br>
         <input type="file" name="file" id="file" accept=".epub"><br>
