--- a/templates/books/view.html
+++ b/templates/books/view.html
@@ -7,28 +7,49 @@
     <link href="/static/css/style.css" rel="stylesheet">
 </head>
 
+<style>
+    .container {
+        display: grid; 
+        grid-template-columns: 1fr 1fr; 
+        grid-template-rows: 1fr 1fr; 
+        gap: 0px 0px; 
+        grid-template-areas: 
+            "BookCover BookInfo ."
+            "BookCover BookInfo ."
+            ". . .";
+        border: 5px grey outset;
+    }
+    .BookCover { grid-area: BookCover; }
+    .BookInfo { 
+        grid-area: BookInfo;
+        padding: 0.5rem;    
+    }
+</style>
+
 <body>
-    {{ book["title"] }}<br>
-    {{ book["author"] }}<br>
-    {{ book["isbn"] }}<br>
-    {{ book["publisher"] }}<br>
-    {{ book["publicationDate"] }}<br>
-    {{ book["description"] }}<br>
-    {{ book["pageCount"] }}<br>
-    {{ book["language"] }}<br>
-    {{ book["genre"] }}<br>
-    {{ book["readingAge"] }}<br>
-    {{ book["catalogues"] }}<br><br>
-
-    {% if user.admin %}
-    <a href="/admin/books/edit/{{ book['bookID'] }}">Edit Book</a><br><br>
-    {% endif %}
-
-    <img src="{{ book['coverURL'] }}" alt="Cover Image">
-    
-    {% if book["fileURL"] %}
-    <br><br><a href="/books/read/{{ book['bookID'] }}">Read Book</a>
-    {% endif %}
+    <div class="container">
+        <div class="BookCover"><img src="{{ book['coverURL'] }}" alt="Cover Image"></div>
+        <div class="BookInfo">
+            <p><b>Title: </b>{{ book["title"] }}</p>
+            <p><b>Author: </b>{{ book["author"] }}</p>
+            <p><b>ISBN: </b>{{ book["isbn"] }}</p>
+            <p><b>Publisher: </b>{{ book["publisher"] }}</p>
+            <p><b>Publication Date: </b>{{ book["publicationDate"] }}</p>
+            <p><b>Description: </b>{{ book["description"] }}</p>
+            <p><b>Page Count: </b>{{ book["pageCount"] }}</p>
+            <p><b>Language: </b>{{ book["language"] }}</p>
+            <p><b>Genre: </b>{{ book["genre"] }}</p>
+            <p><b>Reading Age: </b>{{ book["readingAge"] }}</p>
+            <p><b>Catalogues: </b>{{ book["catalogues"] }}</p><br>
+            
+            {% if user.admin %}
+            <a href="/admin/books/edit/{{ book['bookID'] }}">Edit Book</a><br>
+            {% endif %}
+            {% if book["fileURL"] %}
+            <br><br><a href="/books/read/{{ book['bookID'] }}">Read Book</a>
+            {% endif %}
+            </div>
+    </div>
 </body>
 
 </html>
