Update placeholder book cover and add favicon

--- a/templates/parts/meta.html
+++ b/templates/parts/meta.html
@@ -2,5 +2,6 @@
 <meta name="author" content="DIYA Inc">
 <meta name="description" content="DIYA Inc">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="icon" type="image/x-icon" href="/static/img/favicon.ico">
 
 <script src="/static/scripts/utils/androidCompat.js" async></script>
