--- a/templates/admin/books/add.html
+++ b/templates/admin/books/add.html
@@ -4,56 +4,43 @@
 <head>
     {% include("parts/meta.html") %}
     {% include("parts/nav.html")%}
-    <title></title>
+    <title>New Book</title>
     <link href="/static/css/style.css" rel="stylesheet">
 </head>
 
 <body>
-    <!-- There should be max lengths, check scripts/databaseStructure.sql -->
-    <h2>Book Details</h2>
     <form method="post" action="/admin/books/add" enctype="multipart/form-data">
-        <label for="title">Title (required)</label><br>
-        <input type="text" name="title" id="title"required><br>
+        <label for="title">Title(required)</label><br>
+        <input type="text" name="title" id="title" maxlength="128" required><br>
 
         <label for="author">Author (required)</label><br>
-        <input type="text" name="author" id="author"required><br>
+        <input type="text" name="author" id="author" maxlength="64" required><br>
 
         <label for="isbn">ISBN (required)</label><br>
-        <input type="text" name="isbn" id="isbn"required><br>
+        <input type="text" name="isbn" id="isbn" maxlength="16" required><br>
 
         <label for="publisher">Publisher</label><br>
-        <input type="text" name="publisher" id="publisher"><br>
+        <input type="text" name="publisher" id="publisher" maxlength="64"><br>
 
         <label for="publicationDate">Publication Date</label><br>
         <input type="date" name="publicationDate" id="publicationDate"><br>
 
         <label for="description">Description</label><br>
-        <textarea name="description" id="description"></textarea><br>
+        <textarea name="description" id="description" maxlength="512"></textarea><br>
 
         <label for="pageCount">Page Count</label><br>
         <input type="number" name="pageCount" id="pageCount"><br>
 
-        <!-- Make this be ISO 3166 Alpha 3 country codes
-        https://en.wikipedia.org/wiki/ISO_3166-1_alpha-3
-        maybe a drop down? -->
-        <select id="language" name="language">
-            <option value="eng">English</option>
-            <option value="fra">French</option>
-            <option value="spa">Spanish</option>
-          </select><br>
-
+        {% include("parts/languageSelector.html") %}
 
         <label for="genre">Genre</label><br>
-        <input type="text" name="genre" id="genre"><br>
+        <input type="text" name="genre" id="genre" maxlength="32"><br>
 
         <label for="readingAge">Reading Age</label><br>
         <input type="number" name="readingAge" id="readingAge"><br>
 
-        <!-- This should be a list of catalogues
-        right now the server supports comma seperated values
-        "catalogue1, catalogue2, catalogue3"-->
         <label for="catalogues">Catalogues</label><br>
-        <input type="text" name="catalogues" id="catalogues"><br>
+        <input type="text" name="catalogues" id="catalogues" placeholder="catalogue1, catalogue2, ..."><br>
 
         <label for="file">File</label><br>
         <input type="file" name="file" id="file" accept=".epub"><br>
